[Pipeline] Just a basic processor
A producer / consumer system
You upload json files, it runs the query and callsback with the result

Signed-off-by: Sergio A. Martinez <sergio@engineer.blue>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Launch main test",
             "type": "python",
             "request": "launch",
-            "program": "query_test.py",
+            "program": "llama_batch_process.py",
             "stopOnEntry": false,
             "cwd": "${workspaceFolder}",
             "console": "integratedTerminal",
